Fixed a bug with locations